add HINC global REST API refine the model: explicitly use model of capabilities (not generic one) move the shared class of HINC to common package the development process depends only on model and collector packages. refine the client-gui to call HINC Global REST API